--- a/index.css
+++ b/index.css
@@ -21,5 +21,9 @@ body {
  #cabeçalho{
      display: flex;
      flex-direction: row;
-     border-bottom: 0.4px solid #fff2e7;
  } 
+.conteudo {
+    border-top: 1px solid #fffcfc;
+    box-shadow: 1px 1px 2px 2px black;
+    
+}
