--- a/index.css
+++ b/index.css
@@ -16,11 +16,12 @@
     text-shadow: 4px 4px rgb(0, 0, 0);
 }
 /*body {
-    background-color: #555cfa;
+;
 }*/
  #cabeçalho{
      display: flex;
      flex-direction: row;
+     background-color: #555cfa;
  } 
 .conteudo {
     border-top: 1px solid #fffcfc;
