--- a/index.css
+++ b/index.css
@@ -1,4 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee&family=Cinzel&family=League+Gothic&family=Lobster&family=Stint+Ultra+Condensed&display=swap');
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    text-decoration: none;
+    }
 
 #logo {
     margin: 10px auto;        
@@ -22,6 +28,9 @@
      display: flex;
      flex-direction: row;
      background-color: #555cfa;
+     align-items: center;
+     justify-content: space-around;
+     
  } 
 .conteudo {
     border-top: 1px solid #fffcfc;
