--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ body{
      background-color: #555cfa;
      align-items: center;
      justify-content: space-around;
+    padding: 30px;
      
  } 
  #conteudo {
