--- a/index.css
+++ b/index.css
@@ -37,5 +37,8 @@ body{
     border-top: 1px solid #fffcfc;
     box-shadow: 1px 1px 2px 2px black;
     background-color: #4c9efa;
-    
+}
+.conteudonav{
+    color: white;
+    font-size: 20px;
 }
