--- a/index.css
+++ b/index.css
@@ -38,11 +38,16 @@
     
 }
 .conteudo-principal-escrito-pergunta {
-    color: #7d35fa;
-    text-shadow: 3px 3px rgb(0, 0, 0);
+    color: #7222fb;
+    text-shadow: 3px 3px rgb(5, 33, 132);
     font-size: 300%;
 }
 .conteudonav{
     color: white;
     font-size: 25px;
+}
+.conteudo-principal-escrito-resposta {
+    color: #713dcc;
+    font-size: 160%;
+    text-shadow: 1px 1px white;
 }
