--- a/index.css
+++ b/index.css
@@ -5,6 +5,9 @@
     box-sizing: border-box;
     text-decoration: none;
     }
+    body{
+        background-color:white;
+    }
 
 #logo {
     margin: 10px auto;        
@@ -29,7 +32,6 @@
      align-items: center;
      justify-content: space-around;
     padding: 30px;
-     
  } 
  .conteudo {
     border-top: 1px solid #fffcfc;
