--- a/index.css
+++ b/index.css
@@ -5,9 +5,6 @@
     box-sizing: border-box;
     text-decoration: none;
     }
-    body{
-        background-color:white;
-    }
 
 #logo {
     margin: 10px auto;        
@@ -28,7 +25,7 @@
  #cabeçalho{
      display: flex;
      flex-direction: row;
-     background-color: #555cfa;
+     background: linear-gradient(0.25turn, #555cfa, #555cfa, #4c9efa);
      align-items: center;
      justify-content: space-around;
     padding: 30px;
@@ -36,7 +33,7 @@
  .conteudo {
     border-top: 1px solid #fffcfc;
     box-shadow: 1px 1px 2px 2px black;
-    background-color: #4c9efa;
+    background-color: azure;
     
 }
 .conteudo-principal-escrito{
@@ -44,7 +41,7 @@
 }
 .conteudo-principal-escrito-pergunta {
     color: #7222fb;
-    text-shadow: 3px 3px rgb(5, 33, 132);
+    text-shadow: 2px 2px rgb(0, 0, 0);
     font-size: 300%;
 }
 .conteudonav{
@@ -59,7 +56,7 @@
 .conteudo-principal-escrito-resposta {
     color: #713dcc;
     font-size: 160%;
-    text-shadow: 1px 1px white;
+    text-shadow: 1px 1px rgb(152, 252, 255);
 }
 a:hover {
     color: rgb(179, 250, 250);
