--- a/index.css
+++ b/index.css
@@ -34,6 +34,7 @@
     border-top: 1px solid #fffcfc;
     box-shadow: 1px 1px 2px 2px black;
     background-color: azure;
+    text-align: center;
     
 }
 .conteudo-principal-escrito{
@@ -55,10 +56,13 @@
 }
 
 .conteudo-principal-escrito-resposta {
-    color: #713dcc;
+    color: #8259c9;
     font-size: 160%;
     text-shadow: 1px 1px rgb(152, 252, 255);
 }
 a:hover {
     color: rgb(179, 250, 250);
+}
+.rodape {
+    text-align: center;
 }
