--- a/hiper.css
+++ b/hiper.css
@@ -19,7 +19,7 @@ body {
     justify-content: space-around;
     padding: 30px;
     background: rgba(0, 0, 0, 0.50);
-    border-radius: 0.5em
+    border-radius: 0.5em;
 }
 .conteudonav{
     color: white;
