--- a/sobre.css
+++ b/sobre.css
@@ -6,10 +6,10 @@
     text-decoration: none;
     }
 body {
-    background-image: url(muscle.jpg);
+    background-image: url(gym.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: top center;
 }
 #cabecalho{
     display: flex;
@@ -18,7 +18,7 @@ body {
     align-items: center;
     justify-content: space-around;
     padding: 30px;
-    background: rgba(0, 0, 0, 0.50);
+    background: rgba(0, 0, 0, 0.65);
     border-radius: 0.5em
 }
 .conteudonav{
@@ -35,7 +35,7 @@ body {
     color: #4cd1fa ;
     font-family: 'Audiowide', cursive;
     margin-left: 25px;
-    text-shadow: 4px 4px rgb(0, 0, 0);
+    text-shadow: 0 0 0.5em #87F, 0 0 0.5em #87F, 0 0 0.5em #87F;
 }
 a:hover {
     color: rgb(179, 250, 250);
