Mudança no pagina de hipertrofia
mexi na parte do background. Peguei o site da max e tentei me inspirar um pouco. Ve se vc gosta caso não a gente podia conversar depois para ver o que fazer, acho q assim ficou legal, me da feedback dps

--- a/hiper.css
+++ b/hiper.css
@@ -6,10 +6,8 @@
     text-decoration: none;
     }
 body {
-    background-image: url(muscle.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+ 
+ 
 }
 #cabecalho{
     display: flex;
@@ -40,4 +38,11 @@ a:hover {
     color: rgb(179, 250, 250);
     text-shadow: 0 0 8px white;
     transition: 1s;
+}
+#section-main{
+    background-image: url(muscle.jpg);
+    height: 700px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
