mudança na cor do header

--- a/hiper.css
+++ b/hiper.css
@@ -5,18 +5,14 @@
     box-sizing: border-box;
     text-decoration: none;
     }
-body {
- 
- 
-}
 #cabecalho{
     display: flex;
     flex-direction: row;
-    background: linear-gradient(0.25turn,#4c9efa,#3F48CC 50%,  #4c9efa);
+    background: linear-gradient(0.25turn, #138FB2,#2A222A);
     align-items: center;
     justify-content: space-around;
     padding: 30px;
-    background: rgba(0, 0, 0, 0.50);
+   
 }
 .conteudonav{
     color: white;
