--- a/hiper.css
+++ b/hiper.css
@@ -8,7 +8,7 @@
 #cabecalho{
     display: flex;
     flex-direction: row;
-    background: linear-gradient(0.25turn, #138FB2,#2A222A);
+    background: linear-gradient(0.25turn, #138FB2 10% ,#2A222A 50% );
     align-items: center;
     justify-content: space-around;
     padding: 30px;
