Barra de busca na hipertrofia
pensei que seria interessante se a gente tivesse uma barra de busca nas páginas. Sai olhando na internet e tentei copiar mais ou menos o que tava acontecendo. porem eu n consigo aumentar o tamanho da barra nem mexer muito nas configurações, depois se vc conseguir fica a vontade para mudar

--- a/hiper.css
+++ b/hiper.css
@@ -42,3 +42,24 @@ a:hover {
     background-size: cover;
     background-position: center;
 }
+form{
+    border: none;
+    border-radius: 1px;
+    padding: 2px;
+}
+form input, form button{
+    font-size:  20px;
+    border-radius: 20px;
+    border: none;
+    padding: 20px;
+}
+form button{
+    cursor: pointer;
+    background: none;
+    color: whitesmoke;
+    border: none;
+}
+form button:hoover{
+    background-color: red;
+    color: red;
+}
