--- a/contato.css
+++ b/contato.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 *{
     margin:0;
     padding:0;
@@ -137,3 +138,24 @@ a:hover {
         text-shadow: 0 0 0.5em rgb(249, 0, 87), 0 0 0.5em rgb(225, 14, 81), 0 0 0.5em rgba(254, 8, 90, 0.732);
         color: rgb(174, 255, 255);
     }
+    
+    .redessociais {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-around;}
+     .fa-brands {
+         color: rgb(228, 198, 198);
+         size: 500%;
+        background: linear-gradient(to bottom, rgba(255,0,0,0.1), rgba(0, 195, 255, 0.6));
+     }   
+     .botao {
+        background: linear-gradient(to bottom, rgba(255,0,0,0.1), rgba(253, 53, 160, 0.6));
+        font-size: 300%;
+        font-family: 'Indie Flower', cursive;
+     }
+     .botao:hover {
+        background: linear-gradient(to bottom, rgba(255,0,0,0.1), rgba(0, 195, 255, 0.6));
+
+     }
+         
