--- a/sobre.css
+++ b/sobre.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tapestry&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 *{
     margin:0;
     padding:0;
@@ -40,4 +44,47 @@ a:hover {
     color: rgb(179, 250, 250);
     text-shadow: 0 0 8px white;
     transition: 1s;
+}
+.conteudo-principal {
+    text-align: center;
+}
+.conteudo-principal-escrito-sobre {
+    color:aliceblue;
+    font-family: 'Tapestry', cursive;
+    font-size: 750%;
+    padding-top: 100px;
+    text-shadow: 0 0 0.5em #87F, 0 0 0.5em #87F, 0 0 0.5em #87F;
+}
+.conteudo-principal-escrito-prop {
+    font-family: 'Lobster', cursive;
+    color: #4cd1fa;
+    font-size: 600%;
+    text-shadow: 0 0 0.5em #87F, 0 0 0.5em #87F, 0 0 0.5em #87F;
+    
+}
+.conteudo-principal-escrito-prop2 {
+    color: aliceblue;
+    font-size: 400%;
+    font-family: 'Yanone Kaffeesatz', sans-serif;
+    text-shadow: 0 0 0.5em rgb(37, 4, 255), 0 0 0.5em rgb(74, 131, 255), 0 0 0.5em rgb(119, 171, 255);
+    padding-left: 200px;
+    padding-right: 200px;
+    
+
+}
+.mapa {
+    padding-top: 20px;
+    justify-content: center;
+    
+}
+.rodape {
+    text-align: center;
+    padding: none;
+    color: white;
+    align-items: center;
+    
+}
+.copyright{
+    padding-top: 20px;
+    font-size: 100%;
 }
