--- a/hiper.css
+++ b/hiper.css
@@ -24,6 +24,7 @@
 .anav{
     padding:10px;
     color: rgb(255, 255, 255);
+    font-family: 'Kanit', sans-serif;
 }
 #logotexto {
     font-size: 420%;
