--- a/loja.css
+++ b/loja.css
@@ -1,6 +1,11 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Basic&display=swap');
 *{
     margin:0;
     padding:0;
@@ -37,12 +42,13 @@
  .anav{
     padding:10px;
     color: rgb(255, 255, 255);
+    font-family: 'Kanit', sans-serif;
 }
 body{
     background-color:#181818 ;
 }
 main{
-    background-color: whitesmoke;
+    background-color: #333333;
     margin: 70px;
     border-radius: 25px;
     padding: 30px;
@@ -50,13 +56,39 @@ main{
 }
 #h1daloja{
     padding: 30px;
-    font-size: 45px;
+    font-size: 50px;
+    font-family: 'Basic', sans-serif;
+    color: whitesmoke;
 
 }
-main > p{
+.produtos{
+    display: flex;
+    flex-direction: space-between;
+    padding: 30px;
+   
+    
+}
+.produto{
+    border: 1px solid black;
+    margin: 20px;
+    border-radius: 20px;
+    padding: 30px;
+    background-color: #d8d1d1;
+    cursor: pointer;
+}
+section > section:hover{
+    background-color: rgb(151, 151, 151);
+}
+.produto p{
     font-family: 'Chivo', sans-serif;
-
-
+    font-size: 30px;
+    padding: 15px;
+    margin: 0px 50px 0px 50px;
+    
 }
+
+
+
+
 
  
